--- a/index.html
+++ b/index.html
@@ -1,11 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Challenge 1</title>
+  <title>Corporate Snakes</title>
+  <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-  <h1>Challenge 1</h1>
+  <div class="container">
+    <div class="target">
+      <div class="image-container">
+        <div class="box">
+          <p class="text">Business</p>
+        </div>
+        <p class="text1">August 30, 2023</p>
+        <h1 class="title">The Best Pomodoro App to Increase Your Productivity</h1>
+        <p class="text2">Lorem ipsum dolor sit amet consectetur. Dictum mi ante ut sed faucibus felis suspendisse est.
+          Quam lectus tincidunt tellus suscipit diam velit.</p>
+        <img src="./img/avatar.jpg" alt="" class="image-avatar">
+        <p class="text3">by John Carter</p>
+        <img src="./img/snake one.jpg" alt="Photograph of a snake waiting to hunt" class="image">
+        <hr>
+        <div class="text-container">
+          <p class="text4">Trending Now</p>
+        </div>
+        <div class="image-three">
+          <div class="image-one">
+            <img src="./img/snake two.jpg" alt="Photograph of a snake waiting to hunt" class="image-small">
+            <div>
+              <hr>
+              <h2 class="text5">ASO: How to Rank Your App in the Mobile App Stores</h2>
+              <p class="text6">Lorem ipsum dolor sit amet consectetur. Dictum mi ante ut sed faucibus felis suspendisse
+                est.</p>
+              <div class="box1-Marketing1">
+                <p class="text11">Marketing</p>
+              </div>
+              <p class="text12">August 27, 2023</p>
+              <p class="text13">8 min read</p>
+            </div>
+          </div>
+          <div class="image_two">
+            <img src="./img/snake three.jpg" alt="Photograph of a snake waiting to hunt" class="image-small">
+            <div>
+              <hr>
+              <h3 class="text7">Learn How to Choose the Best Management Software</h3>
+              <p class="text8">
+                Lorem ipsum dolor sit amet consectetur. Dictum mi ante ut sed faucibus felis suspendisse est.
+              </p>
+              <div class="box2-Marketing1">
+                <p class="text14">Development</p>
+              </div>
+              <p class="text15">August 24, 2023</p>
+              <p class="text16">8 min read</p>
+            </div>
+          </div>
+          <div class="image-small">
+            <img src="./img/snake four.jpg" alt="Photograph of a snake waiting to hunt" class="image-small">
+            <div>
+              <h3 class="text9">How to Create a Powerful Marketing Sales Funnel</h3>
+              <p class="text10">
+                Lorem ipsum dolor sit amet consectetur. Dictum mi ante ut sed faucibus felis suspendisse est.
+              </p>
+              <div class="box3-Marketing1">
+                <p class="text17">Marketing</p>
+              </div>
+              <p class="text18">August 23, 2023</p>
+              <p class="text19">12 min read</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
