--- a/index.html
+++ b/index.html
@@ -4,75 +4,91 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Corporate Snakes</title>
+  <title>Tu Voz, Tu Poder: ¡Dilo Alto, Dilo Claro! </title>
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-  <div class="container">
-    <div class="target">
-      <div class="image-container">
-        <div class="box">
-          <p class="text">Business</p>
-        </div>
-        <p class="text1">August 30, 2023</p>
-        <h1 class="title">The Best Pomodoro App to Increase Your Productivity</h1>
-        <p class="text2">Lorem ipsum dolor sit amet consectetur. Dictum mi ante ut sed faucibus felis suspendisse est.
-          Quam lectus tincidunt tellus suscipit diam velit.</p>
-        <img src="./img/avatar.jpg" alt="" class="image-avatar">
-        <p class="text3">by John Carter</p>
-        <img src="./img/snake one.jpg" alt="Photograph of a snake waiting to hunt" class="image">
-        <hr>
-        <div class="text-container">
-          <p class="text4">Trending Now</p>
-        </div>
-        <div class="image-three">
-          <div class="image-one">
-            <img src="./img/snake two.jpg" alt="Photograph of a snake waiting to hunt" class="image-small">
-            <div>
-              <hr>
-              <h2 class="text5">ASO: How to Rank Your App in the Mobile App Stores</h2>
-              <p class="text6">Lorem ipsum dolor sit amet consectetur. Dictum mi ante ut sed faucibus felis suspendisse
-                est.</p>
-              <div class="box1-Marketing1">
-                <p class="text11">Marketing</p>
-              </div>
-              <p class="text12">August 27, 2023</p>
-              <p class="text13">8 min read</p>
-            </div>
-          </div>
-          <div class="image_two">
-            <img src="./img/snake three.jpg" alt="Photograph of a snake waiting to hunt" class="image-small">
-            <div>
-              <hr>
-              <h3 class="text7">Learn How to Choose the Best Management Software</h3>
-              <p class="text8">
-                Lorem ipsum dolor sit amet consectetur. Dictum mi ante ut sed faucibus felis suspendisse est.
-              </p>
-              <div class="box2-Marketing1">
-                <p class="text14">Development</p>
-              </div>
-              <p class="text15">August 24, 2023</p>
-              <p class="text16">8 min read</p>
-            </div>
-          </div>
-          <div class="image-small">
-            <img src="./img/snake four.jpg" alt="Photograph of a snake waiting to hunt" class="image-small">
-            <div>
-              <h3 class="text9">How to Create a Powerful Marketing Sales Funnel</h3>
-              <p class="text10">
-                Lorem ipsum dolor sit amet consectetur. Dictum mi ante ut sed faucibus felis suspendisse est.
-              </p>
-              <div class="box3-Marketing1">
-                <p class="text17">Marketing</p>
-              </div>
-              <p class="text18">August 23, 2023</p>
-              <p class="text19">12 min read</p>
-            </div>
-          </div>
+
+  <header class="panel">
+    <p class="text">A través del apoyo y la búsqueda de justicia, podemos sanar y encontrar la fuerza para construir un
+      futuro libre de violencia sexual</p>
+  </header>
+  <header class="panel">
+    <p class="text">Incluso en los momentos más oscuros, la esperanza brilla como una luz guía hacia la sanación y la
+      recuperación después de la violencia sexual</p>
+  </header>
+
+  <article>
+    <div>
+      <h1 class="title">Tu Voz, Tu Poder: ¡Dilo Alto, Dilo Claro!</h1>
+      <p class="text2">El abuso sexual representa una grave violación de los derechos humanos y una problemática social
+        de gran magnitud, es caracterizada por la imposición de actos sexuales no deseados o coercitivos sobre una
+        persona, ejerciendo poder y control sobre la víctima. En el contexto universitario, este fenómeno adquiere una
+        relevancia especial, ya que los campus suelen ser entornos donde convergen personas de diferentes edades,
+        géneros y trasfondos culturales, lo que puede aumentar la vulnerabilidad de ciertos individuos frente a posibles
+        agresores.</p>
+      <img src="./img/Premium Vector _ Thinking positive mindset.jfif" alt="" class="image-avatar">
+      <p class="text3">Tomate tu tiempo</p>
+      <img class="imagen-de-fondo" src="./img/descarga (5).jfif" alt="Photograph of a snake waiting to hunt">
+    </div>
+  </article>
+
+  <article>
+    <div class="image-three">
+      <div class="image-one">
+        <img src="./img/Joven recibiendo ayuda y cura del estrés _ Vector Premium.jfif"
+          alt="Photograph of a snake waiting to hunt" class="image-small">
+        <div>
+
+          <hr>
+          <h2 class="text5">¿Qué hacer en caso de violencia sexual?</h2>
+          <p class="text6">Si eres víctima de violencia sexual, busca ayuda de inmediato, ya sea de amigos, familiares o
+            servicios de emergencia. Busca atención médica para tratar cualquier lesión física y cuidar tu salud mental.
+            Considera hablar con alguien de confianza y, si te sientes preparada, denuncia el incidente. Busca apoyo
+            profesional para procesar lo ocurrido y cuida de ti misma durante el proceso de recuperación. Recuerda que
+            no estás sola y que hay personas y recursos disponibles para ayudarte.
+            </p>
         </div>
       </div>
+  </article>
+
+  <article>
+    <div class="image_two">
+      <img src="./img/descarga (6).jfif" alt="Photograph of a snake waiting to hunt" class="image-small">
+      <div>
+        <hr>
+        <h3 class="text7">¿Como acudir a las demás personas?</h3>
+        <p class="text8">
+          Cuando decidas hablar sobre la violencia sexual con alguien, elige un momento tranquilo y un lugar donde te sientas segura. Empieza poco a poco, compartiendo tus sentimientos o mencionando que has pasado por algo difícil. Utiliza un lenguaje claro y directo para explicar lo que has experimentado. Establece límites si hay temas que no deseas discutir. Si necesitas apoyo emocional o ayuda para decidir cómo proceder, no dudes en pedirlo. Hablar sobre la violencia sexual puede ser difícil, pero buscar apoyo y compartir tus experiencias puede ser un paso importante hacia la sanación. 
+        </p>
     </div>
-  </div>
+  </article>
+
+  <article>
+    <div>
+      <img src="./img/Letras positivas del cuerpo con mujer ilustrada _ Vector Premium.jfif"
+        alt="Photograph of a snake waiting to hunt" class="image-small">
+      <div>
+        <h3 class="text9">¿Qué hacer después?</h3>
+        <p class="text10">
+          Después de enfrentar la violencia sexual, es normal sentirse abrumado y desconectado. Puedes encontrarte luchando con emociones complicadas y una sensación de aislamiento. En estos momentos difíciles, es importante recordar que no estás solo y que hay recursos y personas dispuestas a ayudarte en tu proceso de recuperación.
+          Buscar ayuda profesional puede ser un paso crucial para enfrentar y superar el trauma. Un terapeuta o consejero especializado en violencia sexual puede proporcionarte el apoyo y las herramientas necesarias para manejar tus emociones y avanzar hacia la curación.
+        </p>
+        <div class="box3">
+      <article class="panel">
+</button>
+    <a href="https://www.icbf.gov.co/programas-y-estrategias/proteccion/violencia-sexual" target = _black ><button><p>Acude a la policía en caso de emergencia</p>
+</button></a>
+      </article>
+      <article class="panel">
+      </button>
+      <a href="https://www.minsalud.gov.co/salud/PServicios/Paginas/Sistema-de-emergencias-medicas-SEM.aspx" target = _black ><button><p>Acude a emergencias médicas en caso de abuso</p>
+  </button></a>
+      </article>
+
+    </div>
+  </article>
 </body>
+
 </html>
